Adds dynamic factory pattern ready to incorporate API driven design.
